--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,9 @@ environment:
   sdk: '>=3.0.5 <4.0.0'
 
 dependencies:
+  firebase_core: ^2.5.0
+  cloud_firestore: ^4.8.2
+  firebase_auth: ^4.6.3
   flutter:
     sdk: flutter
 
