--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,10 +10,13 @@ dependencies:
   firebase_core: ^2.5.0
   cloud_firestore: ^4.8.2
   firebase_auth: ^4.6.3
+  json_annotation: ^4.8.1
   flutter:
     sdk: flutter
 
 dev_dependencies:
+  build_runner: ^2.4.6
+  json_serializable: ^6.7.1
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
