--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   cloud_firestore: ^4.8.2
   firebase_auth: ^4.6.3
   json_annotation: ^4.8.1
+  flutter_bloc: ^8.1.3
   flutter:
     sdk: flutter
 
