--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: firebase_flutter_fujitsu
 description: A new Flutter project.
 publish_to: 'none'
-version: 0.1.0
+version: 0.1.1+1
 
 environment:
   sdk: '>=3.0.5 <4.0.0'
@@ -12,6 +12,7 @@ dependencies:
   firebase_auth: ^4.6.3
   json_annotation: ^4.8.1
   flutter_bloc: ^8.1.3
+  go_router: ^9.0.3
   flutter:
     sdk: flutter
 
