--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   firebase_auth: ^4.6.3
   json_annotation: ^4.8.1
   flutter_bloc: ^8.1.3
+  get_it: ^7.6.0
   go_router: ^9.0.3
   flutter:
     sdk: flutter
